// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchEmptyState /> shows SearchEmptyState 1`] = `
<DocumentFragment>
  <div
    class="emptyState foobar"
  >
    <div>
      <img
        alt="vessel"
        class="vesselImage"
      />
      <p>
        Search by vessel name or identification code (IMO, MMSI, VMS ID, etc…). You can narrow your search pressing the filter icon in the top bar
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<SearchNoResultsState /> shows SearchNoResultsState 1`] = `
<DocumentFragment>
  <div
    class="emptyState foobar"
  >
    <div>
      <img
        alt="vessel"
        class="noResultsImage"
      />
      <p>
        Can't find the vessel you are looking for? Try using MMSI, IMO or Call Sign or 
        <a
          href=""
          rel="noopener noreferrer"
          target="_blank"
        >
          contact us
        </a>
         if you still can’t find it.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<SearchNotAllowed /> shows SearchNotAllowed 1`] = `
<DocumentFragment>
  <div
    class="emptyState foobar"
  >
    <div>
      <p>
        Search not allowed
      </p>
    </div>
  </div>
</DocumentFragment>
`;
